adiciona correcao de exercicios

--- a/gestao-colaboradores/src/app/app.component.html
+++ b/gestao-colaboradores/src/app/app.component.html
@@ -1,3 +1,10 @@
 <app-header></app-header>
+<h1>{{title}}</h1>
+<div>
+    <h2>Id: {{ collaborator.id }}</h2>
+    <h2>Nome: {{ collaborator.nome }}</h2>
+    <h2>Salario: {{ collaborator.salario }}</h2>
+    <h2>Cargo: {{ collaborator.cargo }}</h2>
+</div>
 <app-collaborators-list></app-collaborators-list>
 <app-footer></app-footer>
