adiicona correcao de exercicios

--- a/gestao-colaboradores/src/app/features/collaborators/components/collaborators-list/collaborators-list.component.html
+++ b/gestao-colaboradores/src/app/features/collaborators/components/collaborators-list/collaborators-list.component.html
@@ -1,5 +1,3 @@
-<div *ngFor="let collaborator of collaborators">
-    <h1>Nome: {{collaborator.nome}}</h1>
-    <h2>Salario R$: {{collaborator.salario}}</h2>
-    <h2>Cargo: {{collaborator.cargo}}</h2>
+<div class="container">
+    <app-collaborator *ngFor="let item of collaborators" [collaborator]="item"></app-collaborator>
 </div>
