adiciona exemplos da aula

--- a/projeto-aula-directive/src/app/features/products/components/product-list/product-list.component.html
+++ b/projeto-aula-directive/src/app/features/products/components/product-list/product-list.component.html
@@ -9,3 +9,9 @@
     [product]="item"
     [discountPercent]="5"></app-product-card>
 </div>
+
+<div class="product-message"
+[ngClass]="{ 'color-red': showMessageError }"
+*ngIf="showMessageError">
+    <h3>Não existe produtos para essa consulta!</h3>
+</div>
