--- a/projeto-aula-directive/src/app/shared/components/header/header.component.html
+++ b/projeto-aula-directive/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav>
-    <h3>Listagem de Produtos</h3>
+    <h3 appRed>Listagem de Produtos</h3>
     <ul>
         <li>Home</li>
         <li>Serviços</li>
