feat(exercicios): adiciona exercicios

--- a/task-manager/src/app/features/tasks/components/task-list/task-list.component.scss
+++ b/task-manager/src/app/features/tasks/components/task-list/task-list.component.scss
@@ -3,3 +3,9 @@ input {
     height: 35px;
     width: 50%;
 }
+.message {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 10px;
+}
