--- a/task-manager/src/app/features/tasks/components/task/task.component.scss
+++ b/task-manager/src/app/features/tasks/components/task/task.component.scss
@@ -1,5 +1,11 @@
 .completed {
-    background-color: grey;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+}
+
+.uncompleted {
+    background-color: red;
     color: white;
     cursor: pointer;
 }
