--- a/task-manager/src/app/shared/components/header/header.component.html
+++ b/task-manager/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li>Home</li>
-        <li>Contato</li>
+        <li appRed>Home</li>
+        <li appRed>Contato</li>
         <li>Sobre Nós</li>
         <li>Login/Cadastro</li>
     </ul>
