--- a/task-manager/src/app/features/tasks/components/task-list/task-list.component.html
+++ b/task-manager/src/app/features/tasks/components/task-list/task-list.component.html
@@ -1,2 +1,6 @@
 <input type="text" (keyup)="searchCollaborator($event)">
 <app-task *ngFor="let item of filteredTasks" [task]="item"></app-task>
+
+<div class="message" *ngIf="filteredTasks.length === 0">
+    <h1>Não existe tarefas para essa busca!</h1>
+</div>
