feat(exemplo): adiciona exemplo de services

--- a/projeto-aula-pipes/src/app/features/products/components/product-card/product-card.component.html
+++ b/projeto-aula-pipes/src/app/features/products/components/product-card/product-card.component.html
@@ -11,4 +11,10 @@
     <div class="actions add-to-cart" (click)="addToCart()">
         Adicionar ao carrinho
     </div>
+    <div class="actions remove-product" (click)="removeProduct()">
+        Remover produto
+    </div>
+    <div class="actions add-to-cart" (click)="productDetails(product.id)">
+        Detalhes
+    </div>
 </div>
