--- a/projeto-aula-pipes/src/app/features/products/components/product-card/product-card.component.scss
+++ b/projeto-aula-pipes/src/app/features/products/components/product-card/product-card.component.scss
@@ -2,7 +2,7 @@
 
 .card {
     max-width: 250px;
-    height: 550px;
+    height: 630px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -22,6 +22,13 @@
     }
     .add-to-cart {
         color: $cor-padrao-sucesso !important;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .remove-product {
+        color: $cor-aviso-perigo !important;
         cursor: pointer;
         display: flex;
         justify-content: center;
