--- a/gym-manager/src/app/features/members/components/member/member.component.html
+++ b/gym-manager/src/app/features/members/components/member/member.component.html
@@ -3,5 +3,6 @@
     <h2>Mensalidade: {{member.montlhyPayment}}</h2>
     <h2>Data de inclusão: {{member.inclusionDate | date}}</h2>
     <h2>Data último pagamento: {{member.lastPaymentDate | date}}</h2>
+    <button (click)="memberDetails()">Detalhes</button>
     <hr>
 </div>
