--- a/mjv-class-template-driven/src/app/shared/components/header/header.component.html
+++ b/mjv-class-template-driven/src/app/shared/components/header/header.component.html
@@ -1,9 +1,9 @@
 <nav>
     <h3>MJV Class</h3>
     <ul>
-        <li routerLink="/students">Home</li>
-        <li routerLink="/login">Login</li>
-        <li routerLink="/create-student">Adicionar Estudante</li>
-        <li>Sair</li>
+        <li routerLink="/students" *ngIf="student">Home</li>
+        <li routerLink="/login" *ngIf="!student">Login</li>
+        <li routerLink="/create-student" *ngIf="student">Adicionar Estudante</li>
+        <li *ngIf="student" (click)="exit()">Sair</li>
     </ul>
 </nav>
