--- a/mjv-class-template-driven/src/app/features/students/pages/create-student-page/create-student-page.component.html
+++ b/mjv-class-template-driven/src/app/features/students/pages/create-student-page/create-student-page.component.html
@@ -1,39 +1,39 @@
 <app-header></app-header>
 <div class="register-container">
     <h3>Cadastro de Estudantes</h3>
-    <form class="register-form">
+    <form #studentForm="ngForm" class="register-form">
         <div class="form-field">
             <label class="label-input">Nome do Estudante:</label>
-            <input type="text" placeholder="Digite o nome" name="name" required>
+            <input type="text" ngModel placeholder="Digite o nome" name="name" required>
         </div>
         <div class="form-field">
             <label class="label-input">Email:</label>
-            <input type="email" placeholder="Digite o Email"
+            <input type="email" ngModel placeholder="Digite o Email"
             name="email" required>
         </div>
         <div class="form-field">
             <label class="label-input">Senha do estudante:</label>
-            <input type="password" placeholder="Digite a senha"
+            <input type="password" ngModel placeholder="Digite a senha"
             name="password" required>
         </div>
         <div class="form-field">
             <label class="label-input">Valor da mensalidade:</label>
-            <input type="number" placeholder="Digite o valor da mensalidade"
+            <input type="number" ngModel placeholder="Digite o valor da mensalidade"
             name="monthlyPayment" required>
         </div>
         <div class="form-field">
             <label class="label-input">Data de inclusão:</label>
             <input type="text"
-            name="inclusionDate" disabled>
+            name="inclusionDate" [(ngModel)]="student.inclusionDate" disabled>
         </div>
         <div class="form-field">
             <label class="label-input">Último pagamento mensal:</label>
             <input type="text"
-            name="lastMontlyPayment" disabled>
+            name="lastMontlyPayment" [(ngModel)]="student.lastMontlyPayment" disabled>
         </div>
         <div class="form-field">
             <label class="label-input">Curso</label>
-            <select name="course" required>
+            <select name="course" ngModel required>
                 <option value="Angular MJV">Angular MJV</option>
                 <option value="Java MJV">Java MJV</option>
                 <option value="Node MJV">Node MJV</option>
@@ -43,7 +43,9 @@
         <div class="action-form">
             <button
             class="cadastrarProduto"
-            type="submit">Salvar</button>
+            type="submit"
+            [disabled]="studentForm.invalid"
+            (click)="onSubmit(studentForm)">Salvar</button>
         </div>
     </form>
 </div>
