--- a/gym-manager/src/app/features/login/pages/login/login.page.html
+++ b/gym-manager/src/app/features/login/pages/login/login.page.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
-    <p>login works!</p>
+    <form>
+        <input type="text" name="email" [(ngModel)]="email" placeholder="Digite seu email">
+        <input type="password" name="password" [(ngModel)]="password" placeholder="Digite sua senha">
+        <button type="button" (click)="login()">Entrar</button>
+        <span class="error" *ngIf="error">Usuário/senha inválidos!</span>
+    </form>
 <app-footer></app-footer>
