--- a/gym-manager/src/app/features/login/pages/login/login.page.scss
+++ b/gym-manager/src/app/features/login/pages/login/login.page.scss
@@ -3,3 +3,25 @@ app-footer {
     bottom: 0;
     width: 100%;
 }
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    input {
+        width: 30%;
+        padding: 10px;
+        margin-top: 20px
+    }
+    button {
+        margin-top: 15px;
+        width: 30%;
+    }
+    .error {
+        color: red;
+        font-size: 12px;
+        margin-top: 10px;
+    }
+}
